Update Precedent Links
Update Precedent Links

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -268,8 +268,8 @@ This selective approach ensures Ethereum Classic remains compatible with the bro
 
 Although Ethereum Mainnet burns the `BASEFEE` as part of its monetary policy, several production EVM chains have chosen to **redirect base fee revenue to treasury contracts** for sustainable development:
 
-- **Ronin Network** (Axie Infinity) sends `BASEFEE` to a DAO-governed [Ronin Treasury](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217)
-- **Celo** redirects base fees to a DAO-controlled [Gas Fee Handler](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438)
+- **Ronin Network** (Axie Infinity) sends `BASEFEE` to a DAO-governed [Ronin Treasury](https://explorer.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
+- **Celo** redirects base fees to a DAO-controlled [Gas Fee Handler](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
 - **Mantle**, **Polygon CDK**, and other modular L2 stacks implement treasury contracts that receive protocol revenue and route it via governance
 
 These examples demonstrate that **redirecting `BASEFEE` to a treasury** — rather than burning it — is a proven, incentive-aligned design used to fund core protocol work, infrastructure, and public goods.
