--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -279,16 +279,16 @@ These implementations reflect a broader trend: **redirecting protocol revenue to
 For deeper implementation study and validation, below are verified contracts used by other EVM ecosystems:
 
 - **Ronin Treasury Contract**  
-  [`0x9f76...5217`](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217)
+  [`0x22ce...694e`](https://explorer.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
 
-- **Celo Gas Fee Handler**  
-  [`0x471E...8438`](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438)
+- **Celo Governance and Treasury Gas Fee Handler**  
+  [`0x471E...8438`](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
 
-- **Mantle Treasury Flow (Docs)**  
-  [https://docs.mantle.xyz/network/mantle-tokenomics/treasury-flow](https://docs.mantle.xyz/network/mantle-tokenomics/treasury-flow)
+- **Mantle Fee Mechanism (Docs)**  
+  [https://docs.mantle.xyz/network/system-information/fee-mechanism](https://docs.mantle.xyz/network/system-information/fee-mechanism)
 
-- **Polygon CDK Modular Treasury (Overview)**  
-  [https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos](https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos)
+- **Polygon CDK Modular DAOs and Treasuries (Docs)**  
+  [https://docs.polygon.technology/](https://docs.polygon.technology/)
 
 These implementations support the validity, neutrality, and resilience of redirecting protocol-layer fees to transparent, on-chain treasuries.
 
