--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -255,19 +255,19 @@ The Olympia Treasury design builds on proven patterns from other EVM-compatible 
 
 - **Ronin Network (Axie Infinity sidechain)**  
   Redirects EIP-1559 `BASEFEE` into a DAO-controlled treasury. Funds are used to support infrastructure, community grants, and long-term protocol maintenance.  
-  [View Contract](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217)
+  [View Contract](https://explorer.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
 
 - **Celo (Layer 1)**  
   Uses a `Gas Fee Handler` to redirect transaction fees toward climate initiatives and community development via a governance-controlled treasury.  
-  [View Handler](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438)
+  [View Govenance and Treasury Contracts](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
 
 - **Mantle (Layer 2)**  
   Implements fee redirection from its L2 sequencer to a treasury contract managed by MantleDAO. Revenue supports grants, infrastructure, and developer programs.  
-  [Read More](https://docs.mantle.xyz/network/mantle-tokenomics/treasury-flow)
+  [Read More](https://docs.mantle.xyz/network/system-information/fee-mechanism)
 
 - **Polygon CDK (Modular Rollup Framework)**  
   Supports modular DAOs and EIP-1559-compatible treasury redirection in sovereign rollups, allowing rollup creators to govern and fund protocol upgrades.  
-  [Polygon CDK Overview](https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos)
+  [Polygon CDK Overview](https://docs.polygon.technology/)
 
 - **OP Stack (used by Base, Optimism)**  
   The OP Stack supports EIP-1559-style transactions and sequencer revenue splitting, but does not redirect `BASEFEE` to a DAO treasury. This provides a useful counterexample for evaluating the neutrality and sustainability of treasury design decisions across rollup architectures.
@@ -284,10 +284,10 @@ For deeper implementation study and validation, below are verified contracts use
 - **Celo Governance and Treasury Gas Fee Handler**  
   [`0x471E...8438`](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
 
-- **Mantle Fee Mechanism (Docs)**  
+- **Mantle Fee Mechanism**  
   [https://docs.mantle.xyz/network/system-information/fee-mechanism](https://docs.mantle.xyz/network/system-information/fee-mechanism)
 
-- **Polygon CDK Modular DAOs and Treasuries (Docs)**  
+- **Polygon CDK (Modular Rollup Framework)**  
   [https://docs.polygon.technology/](https://docs.polygon.technology/)
 
 These implementations support the validity, neutrality, and resilience of redirecting protocol-layer fees to transparent, on-chain treasuries.
