Add Child DAOs + Centralized Donations
+ Add Child DAOs for non-optional funding. Prevent proposal fatigue.
+ Clarifies centralized funding stakeholders benefit in Olympia

--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -119,6 +119,53 @@ These practices ensure public accountability and reduce the risk of governance c
 
 A minimum of three multisig signers with distinct affiliations SHOULD be established at DAO launch, with additional signers onboarded gradually through community nomination and DAO approval. Signers SHALL be rotated periodically to mitigate long-term entrenchment. No signer SHALL possess unilateral authority or override privileges.
 
+### Child-DAO Modules for Critical Infrastructure
+
+To ensure continuous support for critical infrastructure — such as Core-Geth maintenance, Mordor Testnet, RPC nodes, and explorer services — Olympia DAO MAY establish **Child-DAO modules** with delegated authority and scoped budgets.
+
+These infrastructure-focused sub-DAOs enable public accountability, funding predictability, and specialization without compromising the integrity of main DAO governance.
+
+#### Examples of Child-DAOs
+
+- **Client DAO**  
+  - Maintains protocol clients (e.g., Core-Geth)  
+  - Reviews CVEs, performs upgrades, and ensures consensus compatibility  
+  - May include known contributors or rotating public stewards  
+  - Receives recurring budgets based on deliverables
+
+- **Infra DAO**  
+  - Manages public RPC endpoints, explorer tools, indexers, and DevOps support  
+  - Coordinates with the ecosystem to reduce fragmentation and maintain uptime  
+  - May fund third-party services, fallback infra, and monitoring tools
+
+- **Security DAO** *(Optional)*  
+  - Funds independent audits, formal verification, and testnet fuzzing  
+  - Grants bounty rewards for bug discovery and vulnerability disclosures
+
+#### Child-DAO Governance Parameters
+
+- Child-DAOs SHALL be deployed as modular contracts under the authority of the main DAO.
+- All disbursements from the Olympia Treasury MUST still pass through governance via structured ECFPs or scheduled approvals.
+- Each Child-DAO MAY:
+  - Propose a recurring budget
+  - Publish periodic expenditure reports
+  - Be subject to reauthorization, reduction, or sunset via main DAO vote
+
+#### Benefits of the Child-DAO Model
+
+- Ensures **non-optional infrastructure** (e.g., clients, RPCs) remains funded transparently
+- Encourages **long-term developer participation** with reduced political friction
+- Enables **specialized governance** for technically complex or recurring tasks
+- Preserves main DAO bandwidth by reducing proposal fatigue
+
+#### Accountability and Transparency
+
+- Child-DAOs MUST publish public dashboards or reports tied to deliverables.
+- Proposals MAY include specific KPIs or milestone-based disbursement.
+- All interactions between the Treasury and Child-DAOs MUST emit standardized events and maintain full on-chain auditability.
+
+This approach balances decentralization with practical sustainability, ensuring Ethereum Classic can retain high-quality contributors and resilient infrastructure over the long term.
+
 ### Rationale
 
 #### Modular, Future-Ready Governance
