--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -129,6 +129,28 @@ To maintain resilience and openness, the following mitigations MAY be enforced b
 - **Voting Model Upgradeability**  
   - The DAO MAY upgrade the voting system through governance, including adopting non-token-based models such as quadratic voting, identity-verified voting, or soulbound token schemes. These upgrades MUST follow the standard ECFP governance path.
 
+#### Child-DAO ECFPs for Infrastructure Spending
+
+To streamline recurring, non-optional funding (e.g., client maintenance, RPC services), the DAO MAY define **Child-DAO ECFP categories** with specialized workflows and delegated budgets.
+
+These subtypes support predictable and auditable funding streams for infrastructure-critical domains, such as:
+
+- **Client DAO** – Maintains protocol clients like Core-Geth
+- **Infra DAO** – Funds RPC nodes, explorers, monitoring, and deployment tooling
+- **Security DAO** – Handles audits, CVEs, bounty programs, and formal verification
+
+Each Child-DAO:
+- Submits ECFPs on a scheduled or recurring basis
+- Operates under scoped authority granted by main DAO votes
+- Publishes periodic progress and expenditure reports
+- May be sunset or reauthorized through ECFP proposals
+
+This structure ensures:
+- **Timely, depoliticized support** for critical services
+- **Public accountability** through transparent disbursement and reporting
+- **Reduced governance overhead** for non-controversial infrastructure tasks
+
+Child-DAO ECFPs MUST still follow the standard ECFP lifecycle (submission → voting → timelocked execution) and remain subject to community oversight and DAO quorum rules.
 
 #### Governance Scope
 
@@ -178,6 +200,30 @@ DAO tokenholders MAY reassign LLC roles or rotate signers via term-limited elect
   - Subject to community oversight
 
 **Informative Note**: As a best practice, the DAO MAY define a "Donation ECFP" format, enabling donors to align earmarked contributions with specific proposals. All such disbursements MUST pass through the standard governance process.
+
+#### Strategic Donors and Institutional Funders
+
+The ECFP framework also enables transparent and accountable participation by centralized or institutional donors, such as:
+
+- Centralized exchanges (CEXs)  
+- Mining pools and ASIC manufacturers  
+- Investment trusts and ETF managers (e.g., Grayscale, VanEck)  
+- Infrastructure sponsors (e.g., RPC, explorer, hosting providers)  
+- Web3 venture firms and protocol builders
+
+These stakeholders benefit from a healthy, stable Ethereum Classic network — and now have a formal mechanism to support it.
+
+Key features that make Olympia suitable for institutional participation:
+
+- ✅ **Legal execution**: The Ethereum Classic DAO LLC provides regulatory clarity, binding vote enforcement, and reporting.  
+- ✅ **Transparent governance**: All disbursements require on-chain DAO approval and are immutably recorded.  
+- ✅ **Auditable funding**: Every donation, proposal, and execution path is traceable and reproducible.  
+- ✅ **Optional alignment**: Donors may voluntarily submit or support “Donation ECFPs” to earmark funds for specific initiatives.  
+- ✅ **No privileged access**: All participants — large or small — must follow the same governance process.
+
+This structure welcomes support from centralized entities without compromising decentralization or fairness.
+
+Olympia provides the first compliant, on-chain, and permissionless path for long-term funders to contribute to Ethereum Classic infrastructure — ending reliance on opaque, off-chain arrangements.
 
 ### Rationale
 
