Polish Contract Examples
+ Add Notes and Clarity
+ Fix Core-Geth Example

--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -365,16 +365,22 @@ Voting MAY be implemented using one or more of the following mechanisms:
 
 The initial implementation SHALL avoid pre-minting any governance token. Any future token issuance MUST be approved via DAO vote and remain compliant with anti-premine principles.
 
+> The following code demonstrates voting mechanics using OpenZeppelin’s GovernorVotes standard.
+
 ```solidity
-// Example: Delegate voting power to another address
+// --- BEGIN VOTING EXAMPLE ---
+// This example uses OpenZeppelin’s GovernorVotes extension pattern.
+// It demonstrates delegated voting and snapshot-based vote retrieval.
+// https://docs.openzeppelin.com/contracts/4.x/governance#governor-votes
+
 function delegate(address delegatee) public {
     _delegate(msg.sender, delegatee);
 }
 
-// Snapshot block used to calculate voting weight
 function getVotes(address account, uint256 blockNumber) public view returns (uint256) {
     return _checkpoints[account].getAtBlock(blockNumber);
 }
+// --- END VOTING EXAMPLE ---
 ```
 
 #### 4. Proposal Metadata and Off-Chain Discussion
@@ -419,7 +425,17 @@ Treasury disbursements SHALL use deterministic proposal hashes for release valid
 The DAO queues and executes proposals after a voting delay. Execution is programmatic and non-discretionary, ensuring the treasury cannot be manipulated or diverted.
 
 ```solidity
-// On-chain: DAO timelock execution calling Treasury
+// --- BEGIN TIMELOCK EXECUTION EXAMPLE ---
+// This function represents the final on-chain execution step after DAO approval.
+// It is called by the Governor contract after the voting period and timelock delay.
+//
+// The function ensures:
+// - Only proposals that have been successfully queued can be executed.
+// - Disbursement occurs via the OlympiaTreasury contract, enforcing strict separation of concerns.
+//
+// This pattern is derived from OpenZeppelin GovernorTimelockControl:
+// https://docs.openzeppelin.com/contracts/4.x/api/governance#GovernorTimelockControl
+
 function executeECFP(
     bytes32 proposalHash,
     address recipient,
@@ -428,6 +444,7 @@ function executeECFP(
     require(_isQueuedProposal(proposalHash), "Not queued or invalid");
     OlympiaTreasury(treasuryAddress).release(proposalHash, recipient, amount);
 }
+// --- END TIMELOCK EXECUTION EXAMPLE ---
 ```
 #### Proposal Hash Generation: Off-Chain Tooling
 
