--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -299,7 +299,17 @@ The Ethereum Classic Funding Proposal (ECFP) process SHALL be implemented as an 
 Proposal metadata MUST be hashed and linked to content-addressed storage (e.g., IPFS or Arweave) using the following structure:
 
 ```solidity
-// On-chain: Store metadata CID and verify hash
+// --- BEGIN PROPOSAL SUBMISSION FUNCTION ---
+// This function is called by any address wishing to submit a funding proposal.
+// It records the proposal details and binds them to a unique hash derived from:
+// - proposal ID
+// - recipient address
+// - requested amount
+// - off-chain metadata content hash (IPFS/Arweave)
+// - chain ID (for replay protection)
+//
+// Proposals should be discussed off-chain and finalized before submission.
+// This contract does not validate deliverables or enforce proposal quality.
 function submitECFP(
     uint256 ecfpId,
     address recipient,
@@ -309,6 +319,7 @@ function submitECFP(
     bytes32 hash = keccak256(
         abi.encodePacked(ecfpId, recipient, amount, metadataCID, block.chainid)
     );
+
     proposals[ecfpId] = Proposal({
         id: ecfpId,
         recipient: recipient,
@@ -316,8 +327,10 @@ function submitECFP(
         metadataCID: metadataCID,
         hash: hash
     });
+
     emit ProposalSubmitted(ecfpId, recipient, amount, metadataCID, hash);
 }
+// --- END PROPOSAL SUBMISSION FUNCTION ---
 ```
 
 #### 2. On-Chain Registry and Governance
@@ -351,16 +364,27 @@ function submitECFP(
 - Each transaction MUST include the relevant ECFP ID and metadata hash to ensure auditability.
 
 ```solidity
-// Off-chain: Generate ECFP proposal hash for on-chain binding
-bytes32 proposalHash = keccak256(
-    abi.encodePacked(
-        ecfpId,        // Unique proposal ID (e.g., 0042)
-        recipient,     // Destination address
-        amount,        // Funding amount in wei
-        metadataCID,   // Content hash from IPFS or Arweave
-        block.chainid  // Replay protection domain separator
-    )
-);
+// --- BEGIN PROPOSAL EXECUTION FUNCTION ---
+// This function is called by the Olympia DAO executor after a successful on-chain vote.
+// It disburses funds from the Treasury by calling the `release()` function,
+// using a hash-bound payload that ensures:
+// - The recipient and amount match the proposal metadata
+// - The proposal passed governance vote and is approved
+// - The execution is recorded immutably on-chain
+//
+// This function MUST only be callable by the DAO executor.
+// It assumes prior validation has occurred through voting + timelock logic.
+
+function executeECFP(
+    uint256 ecfpId,
+    bytes32 proposalHash,
+    address recipient,
+    uint256 amount
+) external {
+    require(isApproved(ecfpId), "ECFP not approved");
+    OlympiaTreasury(treasuryAddress).release(proposalHash, recipient, amount);
+}
+// --- END PROPOSAL EXECUTION FUNCTION ---
 ```
 
 All disbursements MUST emit a standardized `ProposalExecuted` event for transparency, analytics, and auditability.
@@ -426,6 +450,8 @@ This example proposal hash serves as the unique identifier for execution. It lin
 
 ```solidity
 // Off-chain: Generate ECFP proposal hash for on-chain binding
+// This must match the exact structure used in submitECFP()
+// and be calculated prior to DAO voting for proposal integrity.
 bytes32 proposalHash = keccak256(
     abi.encodePacked(
         ecfpId,        // Unique proposal ID (e.g., 0042)
