--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -95,19 +95,40 @@ The Olympia upgrade activates the following Ethereum protocol improvements on Et
 - The `basefee` is **redirected** (not burned) to a designated treasury address managed by the [Olympia Treasury contract (ECIP-1112)](https://ecips.ethereumclassic.org/ECIPs/ecip-1112).
 - The treasury contract is immutable, non-upgradable, and governed exclusively by on-chain proposals submitted and executed through [Olympia DAO (ECIP-1113)](https://ecips.ethereumclassic.org/ECIPs/ecip-1113).
 
-##### Example: Hardcoded BASEFEE Redirection (Solidity)
+##### Example: Hardcoded BASEFEE Redirection
 
-```solidity
-// Core-Geth basefee redirection logic (simplified pseudocode)
-address constant TREASURY = 0x4242...ecip1112; // Replace with final deployed treasury address
+```go
+// --- BEGIN PSEUDOCODE ---
+// This logic is implemented at the client level (e.g., Core-Geth) in Go.
+// It illustrates how EIP-1559's BASEFEE is redirected to the Olympia Treasury
+// instead of being burned (as on Ethereum mainnet).
 
-function finalizeBlock(...) internal {
+func finalizeBlock(block *Block, state *StateDB) error {
     ...
-    uint256 baseFeeAmount = block.basefee * gasUsed;
-    payable(TREASURY).transfer(baseFeeAmount); // Send to Olympia Treasury
+    // Calculate total BASEFEE from gas used in all transactions
+    baseFeeAmount := block.GasUsed * block.BaseFee
+
+    // Redirect BASEFEE to the fixed Olympia Treasury address
+    treasuryAddress := common.HexToAddress("0x4242...ecip1112") // Replace with deployed value
+    state.AddBalance(treasuryAddress, baseFeeAmount)
+
+    // Miner still receives priority fees (tips)
+    minerAddress := block.Coinbase
+    state.AddBalance(minerAddress, block.TotalPriorityFees())
+
     ...
+    return nil
 }
+// --- END PSEUDOCODE ---
 ```
+
+##### Pseudocode Notes
+
+- This is illustrative only — the real implementation resides in:
+  - [`miner/block.go`](https://github.com/ethereumclassic/core-geth/blob/master/eth/consensus/ethash/block.go)
+  - `core/state_transition.go`
+- `StateDB` is Core-Geth's execution ledger, used to apply balance changes during mining.
+- This logic is consensus-critical and must match across clients to preserve fork integrity.
 
 🔒 **Consensus-critical logic**: This redirection is enforced within the client’s block finalization process and **cannot be bypassed or altered** without a hard fork. The `BASEFEE` is transferred to the Olympia Treasury at the protocol level before miner rewards are issued.
 
