--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -134,7 +134,18 @@ contract OlympiaTreasury {
     /// @notice Fallback to accept incoming BASEFEE transfers
     receive() external payable {}
 
+    // --- BEGIN TREASURY RELEASE FUNCTION ---
     /// @notice Executes an approved proposal via hash-bound disbursement
+    /// @dev This function is called only by the authorized DAO executor contract
+    ///      after an on-chain vote and timelock delay have completed.
+    ///
+    /// This function ensures:
+    /// - Execution happens only once per proposalHash
+    /// - Funds are transferred only to valid recipients
+    /// - Emits a standardized event for auditability
+    ///
+    /// This function MUST NOT include any voting or validation logic.
+    /// It is a pure disbursement hook to preserve governance separation.
     /// @param proposalHash Unique hash derived off-chain from proposal metadata
     /// @param recipient Target address to receive funds
     /// @param amount Amount of ETC (in wei) to transfer
@@ -154,6 +165,7 @@ contract OlympiaTreasury {
 
         emit FundsReleased(proposalHash, recipient, amount);
     }
+    // --- END TREASURY RELEASE FUNCTION ---
 }
 ```
 
