Composable DeFi Feedback Loop
+ Incorporates Mercer's DeFi Feedback Loop concept.

--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -221,6 +221,24 @@ Key features that make Olympia suitable for institutional participation:
 - ✅ **Optional alignment**: Donors may voluntarily submit or support “Donation ECFPs” to earmark funds for specific initiatives.  
 - ✅ **No privileged access**: All participants — large or small — must follow the same governance process.
 
+#### Protocol-Level Donors and Fee Forwarding (Composable DeFi Stack)
+
+In addition to off-chain donations, Olympia also enables EVM-native **protocol-level donations** from composable DeFi applications and foundational infrastructure deployed on Ethereum Classic. Protocols such as DEXs, lending markets, liquid staking, stablecoins, and token wrappers MAY opt to **hardcode a small percentage of transaction fees, yield, or protocol revenue** to be forwarded to the Olympia Treasury address.
+
+This creates a **sustainable feedback loop**:
+
+> More DeFi usage → more protocol volume → more fee-based donations → more funding for infrastructure → more users and applications
+
+This model mirrors successful funding practices seen in the broader EVM ecosystem (e.g., Lido, Balancer, Aura, RocketPool), where smart contracts forward protocol-level value to community-governed treasuries.
+
+By adopting this design on Ethereum Classic, Olympia encourages:
+
+- Composable, opt-in support from DeFi protocols  
+- Transparent, verifiable on-chain donation flows  
+- A self-reinforcing ecosystem of usage and development
+
+These contributions SHOULD be publicly disclosed and MAY use a standardized “Donation ECFP” format if alignment with a specific milestone, KPI, or proposal is desired. All funds, regardless of source, MUST pass through on-chain execution by Olympia DAO, ensuring neutrality and auditability.
+
 This structure welcomes support from centralized entities without compromising decentralization or fairness.
 
 Olympia provides the first compliant, on-chain, and permissionless path for long-term funders to contribute to Ethereum Classic infrastructure — ending reliance on opaque, off-chain arrangements.
